# games101

./: README.md
final_work/: CMakeLists.txt  main.cpp
final_work/.cache/clangd/index/: main.cpp.0F6A795CE30283A2.idx
pa1/: CMakeLists.txt  main.cpp  rasterizer.cpp
pa1/.cache/clangd/index/: Triangle.cpp.7129D0DC17C21D11.idx  Triangle.hpp.CE55CE706F03779B.idx  main.cpp.989392FF9011E20B.idx  rasterizer.cpp.5ACA8D86EA50BE40.idx  rasterizer.hpp.ED722D8B8210FC8A.idx
pa2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
pa2/.cache/clangd/index/: Triangle.cpp.64BDF476D7BD644F.idx  Triangle.hpp.4196F6CA1CA3D233.idx  global.hpp.E22FEFA4B08C07CA.idx  main.cpp.4E2BB72F7ED52ADD.idx  rasterizer.cpp.0919CF31C54D50CC.idx  rasterizer.hpp.037AC497F35B64A1.idx
pa3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
pa3/Code/.cache/clangd/index/: OBJ_Loader.h.9792C63FD64636C2.idx  Shader.hpp.9B41F7563B865A3C.idx  Texture.cpp.E32A1EBD6FBE2666.idx  Texture.hpp.25E7261115B571F1.idx  Triangle.cpp.325F7B0741958FBC.idx  Triangle.hpp.708EA33EC932D647.idx  global.hpp.031225929490553D.idx  main.cpp.9E8FECB02AFBFEFD.idx  rasterizer.cpp.F4609BD37EF7E9FF.idx  rasterizer.hpp.8836E1CCD6E725D7.idx
pa3/Code/models/LibertyStatue/: LibertStatue-triangeled.mtl
